<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
		
		    <TextView
		        android:id="@+id/txt_station"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/station"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/etxt_default_station"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/defaultstation" />
		
		    <Button
		        android:id="@+id/btn_tag"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/tag" />
		
		    <TextView
		        android:id="@+id/txt_key"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/key"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/etxt_key"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" >
		
		        <requestFocus />
		    </EditText>
		
		    <TextView
		        android:id="@+id/txt_pin"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/pin"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/etxt_pin"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" />
		
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		    	android:orientation="horizontal"
		    >
			    <Button
			        android:id="@+id/btn_register"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/register"
			        />
				<Button
			        android:id="@+id/btn_submit"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/submit"
			        />
		    </LinearLayout>
		
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/output"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <TextView
		        android:id="@+id/txt_output"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1.11"
		        android:layout_marginBottom="5dip"
		        android:inputType="textMultiLine" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>